resources/dsaas-stg/dsaas-preview/f8ui-admin-console.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: f8ui-admin-console
  name: f8ui-admin-console
spec:
  host: admin-console.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8ui-admin-console
    weight: 100
  wildcardPolicy: None
